# scnn_torch_backend

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/scnn_torch_backend/: config.hpp  scnn_torch_backend.hpp
script/: export_scnn_to_pt.py  scnn_lane_detection.py
src/: scnn_torch_backend.cpp
test/: test_scnn_torch_backend.cpp
